@@ -21,9 +21,11 @@ NEW: [features/improvements]
 +Basic support for highlighting asp script embedded in html files.
 +New version of Launch plugin with some bug fixes.
 +Add Close Others option to right click tab menu to close all but the selected tab.
++Add support for Forth files.
 
 LIBRARY:
 +New plugin interface for adding autocompletion providers added (iface.AutocompI)
++FilterDialog class added to eclib
 
 BUG FIXES:
 +Fix some minor vhdl highlighting issues.
